# egui-web-template

./: Cargo.toml  Makefile  README.md  Trunk.toml  egui_web_template-7fd6cd548eb4db38.js  index.html  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: pages.yml  rust.yml
assets/: sw.js
src/: app.rs  lib.rs  main.rs
src/customized/: toggle_switch.rs
